increase `line-height` to fix descenders getting clipped (#212)
Affects Button and ListItem (and therefore also TreeItem).

--- a/packages/kiwi-react/src/bricks/ListItem.css
+++ b/packages/kiwi-react/src/bricks/ListItem.css
@@ -26,7 +26,7 @@
 
 	@layer base {
 		cursor: pointer;
-		line-height: 1;
+		line-height: 1.2;
 		font-size: var(--kiwi-font-size-12);
 
 		display: flex;
